# midwest-randnla-2026

./: .gitignore  .gitmodules  AGENTS.md  Dockerfile  README.md  container-instructions.md  project-instructions.md
bindings/: CMakeLists.txt  pyproject.toml
bindings/python/suparla/: __init__.py
bindings/src/: bqrrp_binding.cc  suparla_module.cc
bindings/tests/: test_bqrrp.py  test_smoke.py
