[build-system]
requires = ["scikit-build-core>=0.9", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "suparla"
version = "0.0.1"
description = "Python bindings for selected RandLAPACK drivers"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]

[tool.scikit-build]
wheel.packages = ["python/suparla"]
cmake.version = ">=3.18"
